<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/linLayMarginLeft"
    android:layout_marginRight="@dimen/linLayMarginRight"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="false"
        android:scrollbarStyle="insideOverlay"
        android:touchscreenBlocksFocus="false"
        android:scrollbars="none"
        android:layout_weight="4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/etMarginTop"
                android:layout_marginBottom="@dimen/etMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="Name"
                    android:id="@+id/et_name"
                    android:drawableRight="@drawable/ic_person"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:capitalize="words"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/etMarginTop"
                android:layout_marginBottom="@dimen/etMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="Email"
                    android:id="@+id/et_email"
                    android:drawableRight="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/etMarginTop"
                android:layout_marginBottom="@dimen/etMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="Contact"
                    android:id="@+id/et_contact"
                    android:drawableRight="@drawable/ic_call"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/etMarginBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:hint="Click icon to get location"
                        android:id="@+id/et_address"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_my_location"
                    android:id="@+id/btn_locate_me"
                    android:layout_weight="0"
                    android:layout_gravity="center|end" />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/etMarginTop"
                android:layout_marginBottom="@dimen/etMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="Password"
                    android:id="@+id/et_password"
                    android:drawableRight="@drawable/ic_key"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/etMarginTop"
                android:layout_marginBottom="@dimen/etMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="Re-enter Password"
                    android:id="@+id/et_repassword"
                    android:drawableRight="@drawable/ic_key"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:text="Register"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:text="Already Registered ? Login Now !"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"/>

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_weight="0"/>

</LinearLayout>